Project 2 Inferno/Main/main/default/objects/Streaming_Content__c/Streaming_Content__c.object-meta.xml
<CustomObject>
    <label>Streaming Content</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Content Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Streaming Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>