Project 2 Inferno/Main/main/default/objects/Streaming_Content__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical issues have been reported if this is checked.</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>