Project 2 Inferno/Main/main/default/objects/Streaming_Content__c/fields/Recommended_Age_Audience__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Age_Audience__c</fullName>
    <label>Recommended Age Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>PG13</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>NC-17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>